Fix 710 - Fixed issue where talent boxes split button was hidden behind the box. (#721)

--- a/styles/starwarsffg.css
+++ b/styles/starwarsffg.css
@@ -997,6 +997,7 @@ img {
   top: 15px;
   font-size: 15px;
   color: white;
+  z-index: 20;
 }
 
 .starwarsffg .talent-upgrade .talent-actions.talent-canSplit .split i {
